--- a/RafaelTestsApp/app/src/main/res/values/strings.xml
+++ b/RafaelTestsApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RafaelTestsApp</string>
+    <string name="edit_message">Enter a Message</string>
+    <string name="button_send">Send</string>
+    <string name="fuck_you">Fuck you, </string>
 </resources>
