--- a/CameraApp/app/src/main/res/values/strings.xml
+++ b/CameraApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="send">Send</string>
     <string name="error">Error while connecting to Central System:</string>
     <string name="wrong_format">Wrong number format:</string>
+    <string name="error_open_camera">Error opening the camera:</string>
 </resources>
