--- a/MasterOfMissingStuff/app/src/main/res/values/strings.xml
+++ b/MasterOfMissingStuff/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="new_item">new_item</string>
     <string name="add_picture">Add picture</string>
     <string name="insert_name">Insert name</string>
+    <string name="item_name">Item name</string>
 </resources>
