--- a/MasterOfMissingStuff/app/src/main/res/values/strings.xml
+++ b/MasterOfMissingStuff/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="add_picture">Add picture</string>
     <string name="insert_name">Insert name</string>
     <string name="item_name">Item name</string>
+    <string name="item_image">item_image</string>
 </resources>
