Fixed code - layout conflicts

--- a/MasterOfMissingStuff/app/src/main/res/values/strings.xml
+++ b/MasterOfMissingStuff/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="insert_name">Insert name</string>
     <string name="item_name">Item name</string>
     <string name="item_image">item_image</string>
+    <string name="save">Save</string>
 </resources>
